added login added tooltip fixed ui stuff

--- a/app/client/app.html
+++ b/app/client/app.html
@@ -16,7 +16,7 @@
 	<a href="https://github.com/macrozone/henri"><img style="position: absolute; top: 40px; right: 0;  border: 0;" src="https://github-camo.global.ssl.fastly.net/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 	{{>header}}
 
-	<div class="container">
+	<div class="container" id="main-container">
 
 		{{>yield}}
 		
@@ -38,10 +38,14 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="/">Home</a></li>
-					<li><a class="btn-nightmode"><span class="glyphicon glyphicon-adjust"></span> Night mode</a></li>
+					
+					<li><a class="btn-nightmode" data-placement="bottom" data-toggle="tooltip" title="Turn on / off Nightmode (inverts colors, may not work in every browser)"><span class="glyphicon glyphicon-adjust"></span> Nightmode</a></li>
 					 {{> yield region='headerNavigation'}}
 				</ul>
+				 <ul class="nav navbar-nav navbar-right">
+				 {{> yield region='headerNavigationRight'}}
+      {{> loginButtons }} <!-- here -->
+    </ul>
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
 	</div>
