--- a/app/client/plots/plot_3d.html
+++ b/app/client/plots/plot_3d.html
@@ -23,7 +23,7 @@
 			<h3 class="panel-title">Plot Options</h3>
 		</div>
 		<div class="panel-body">
-			{{>quickForm collection="Plots" type="update" doc=plot id=plot._id schema=schema}}
+			{{>quickForm collection="Plots" type="update" doc=plot type=formType id=plot._id schema=schema}}
 		</div>
 	</div>
 
