--- a/app/client/plots/plot_x_t.html
+++ b/app/client/plots/plot_x_t.html
@@ -1,14 +1,13 @@
 <template name="plot_x_t">
 	
-	<div>
-		<button class="btn btn-clear">Clear</button>
-	</div>
+
 	
 
 	<div class="chartcontainer col-xs-12 col-sm-7 col-md-8 col-lg-9"></div>
 	<div class="plotControls col-xs-12 col-sm-5 col-md-4 col-lg-3">
 		{{>plot_x_t_controls}}
 	</div>
+	<button class="btn btn-clear btn-warning">Clear Plot</button>
 </template>
 
 <template name="plot_x_t_controls">
@@ -17,7 +16,8 @@
 			<h3 class="panel-title">Plot Options</h3>
 		</div>
 		<div class="panel-body">
-			{{>quickForm collection="Plots" type="update" doc=plot id=plot._id schema=schema}}
+
+			{{>quickForm collection="Plots" type="update" doc=plot type=formType id=plot._id schema=schema}}
 		</div>
 	</div>
 
