changed formatter for plots added new henri image from doc

--- a/app/client/home.html
+++ b/app/client/home.html
@@ -1,6 +1,6 @@
 <template name="home">
 	<div class="jumbotron">
-		<h1 class="pageTitle"><img src="/henri.jpg" />Henri</h1>
+		<h1 class="pageTitle"><img src="/henri.png" />Henri</h1>
 		<p>Create and simulate Dynamic Systems easily</p>
 		{{#if currentUser}}
 			{{>home_createExperimentButton}}
